<resources>
    <string name="app_name">Plutus Finance</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Parola</string>
    <string name="action_sign_in">Conectare</string>
    <string name="action_sign_in_short">Login</string>
    <string name="login_failed">Autentificare esuata</string>
    <string name="logout">Deconectare</string>
    <string name="logout_confirmation_message">Esti sigur ca vrei sa te deconectezi?</string>
    <string name="cancel">Anuleaza</string>
    <string name="confirm">Confirma</string>
    <string name="transactions_title">Tranzactii</string>
    <string name="invoices_title">Facturi</string>
    <string name="partners_title">Parteneri</string>
    <string name="services_title">Servicii</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="delete">Sterge</string>
    <string name="edit">Editeaza</string>
    <string name="add_service_title">Add Service</string>
    <string name="delete_confirmation">Esti sigur ca vrei sa stergi?</string>
    <string name="save_failed">A aparut o eroare</string>
    <string name="prompt_name">Nume</string>
    <string name="prompt_phone">Telefon</string>
    <string name="action_save">Salveaza</string>
    <string name="prompt_vat">VAT</string>
    <string name="prompt_commercial_registry">Reg. Com.</string>
    <string name="prompt_bank_account">Cont bancar</string>
    <string name="prompt_term_in_days">Scadenta (in zile)</string>
    <string name="prompt_address">Adresa</string>
    <string name="customer_label">Client</string>
    <string name="vendor_label">Furnizor</string>
    <string name="individual_label">Individual</string>
    <string name="legal_label">Juridic</string>
    <string name="add_transaction_title">Adauga tranzactie</string>
    <string name="add_partner_title">Adauga partener</string>
    <string name="income_label">Incasare</string>
    <string name="expense_label">Plata</string>
    <string name="prompt_document">Document</string>
    <string name="prompt_details">Detalii</string>
    <string name="prompt_value">Valoare</string>
    <string name="cash_label">Cash</string>
    <string name="bank_label">Banca</string>
    <string name="deductible_label">Deductibila</string>
    <string name="prompt_date">Data</string>
    <string name="invalid_field">Camp obligatoriu</string>
    <string name="create_partner_title">Creare partener</string>
    <string name="update_partner_title">Actualizare partener</string>
    <string name="update_transaction_title">Actualizare tranzactie</string>
    <string name="create_transaction_title">Creare tranzactie</string>
    <string name="product_label">Produs</string>
    <string name="service_label">Serviciu</string>
    <string name="prompt_unit_price">Pret unitar</string>
    <string name="prompt_uom">Unitate de masura</string>
    <string name="prompt_code">Cod</string>
    <string name="prompt_description">Descriere</string>
    <string name="update_item_title">Actualizare item</string>
    <string name="create_item_title">Creare item</string>
    <string name="add_invoice_title">Adauga factura</string>
    <string name="ron_label">RON</string>
    <string name="eur_label">EUR</string>
    <string name="usd_label">USD</string>
    <string name="prompt_due_date">Data scadenta</string>
    <string name="create_invoice_title">Creare factura</string>
    <string name="prompt_client">Client</string>
    <string name="prompt_partner">Partener</string>
    <string name="prompt_country">Tara</string>
    <string name="prompt_bank">Banca</string>
    <string name="action_add_invoice_line">Adauga linie factura</string>
    <string name="invoice_lines_title">Linii factura</string>
    <string name="prompt_item">Item</string>
    <string name="prompt_quantity">Cantitate</string>
    <string name="prompt_price">Pret</string>
    <string name="serial_title">Serie facturi</string>
    <string name="action_update_serial">Actualizeaza</string>
    <string name="currency_title">Curs valutar</string>
    <string name="update_serial_title">Actualizare numar de serie</string>
    <string name="download_transactions">Descarca registru tranzactii</string>
    <string name="download_invoices">Descarca arhiva facturi</string>
    <string name="file_downloaded">Fisierul a fost descarcat</string>
    <string name="downloading">Se descarca…</string>
    <string name="downloaded">Descarcarea s-a incheiat</string>
    <string name="add">Adauga</string>
    <string name="collect_confirmation">Esti sigur ca vrei sa incasezi?</string>
    <string name="ok">OK</string>
</resources>