<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/dashboard">

    <fragment
        android:id="@+id/dashboard"
        android:name="com.finance.plutus.mobile.dashboard.ui.DashboardFragment"
        android:label="@string/dashboard_title"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/services"
        android:name="com.finance.plutus.mobile.items.ui.ServicesFragment"
        android:label="@string/services_title"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/partners"
        android:name="com.finance.plutus.mobile.partners.ui.PartnersFragment"
        android:label="@string/partners_title"
        tools:layout="@layout/fragment_partners" />

    <fragment
        android:id="@+id/invoices"
        android:name="com.finance.plutus.mobile.invoices.ui.InvoicesFragment"
        android:label="@string/invoices_title"
        tools:layout="@layout/fragment_invoices" />

    <fragment
        android:id="@+id/transactions"
        android:name="com.finance.plutus.mobile.transactions.ui.TransactionsFragment"
        android:label="@string/transactions_title"
        tools:layout="@layout/fragment_transactions" />

</navigation>