<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.updateinvoice.UpdateInvoiceActivity">

    <data>

        <variable
            name="line"
            type="com.finance.plutus.mobile.data.network.payload.InvoiceLineUpdateRequest" />

        <variable
            name="request"
            type="com.finance.plutus.mobile.data.network.payload.InvoiceUpdateRequest" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/invoice_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/invoice_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/Theme.Plutus.Toolbar" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/invoice_app_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_32">

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/invoice_currency_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:checkedButton="@id/invoice_usd"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/invoice_ron"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ron_label" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/invoice_eur"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/eur_label" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/invoice_usd"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/usd_label" />

                </com.google.android.material.button.MaterialButtonToggleGroup>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_32">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/invoice_partner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/prompt_client"
                        android:editable="false"
                        android:hint="@string/prompt_client"
                        android:imeOptions="actionDone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_32">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/invoice_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/prompt_date"
                        android:hint="@string/prompt_date"
                        android:imeOptions="actionDone"
                        android:text="@={request.date}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_32">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/invoice_due_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/prompt_due_date"
                        android:hint="@string/prompt_due_date"
                        android:imeOptions="actionDone"
                        android:text="@={request.dueDate}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/invoice_line_item_layout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_32">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/invoice_line_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/prompt_item"
                        android:editable="false"
                        android:hint="@string/prompt_item"
                        android:imeOptions="actionDone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/invoice_line_quantity_layout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_32">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/invoice_line_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/prompt_quantity"
                        android:hint="@string/prompt_quantity"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:text="@={`` + line.quantity}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/invoice_line_price_layout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_32">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/invoice_line_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/prompt_price"
                        android:hint="@string/prompt_price"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:text="@={`` + line.unitPrice}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/invoice_line_details_layout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_32">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/invoice_line_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/prompt_details"
                        android:hint="@string/prompt_details"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:text="@={line.details}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/invoice_save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/margin_32"
                    android:text="@string/action_save" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>